--- a/app/views/twitter/code.html.erb
+++ b/app/views/twitter/code.html.erb
@@ -61,7 +61,7 @@ input:focus, .btn:focus{
     $('input').on('change keyup paste', function() {
       var value = $('input').val();
       if(value.length == 6) {
-        if(value == "BR43JK") {
+        if(value == "CP4APH") {
           $('.btn').prop('disabled',false)
           $('input').css('border-bottom', '1px solid #88dba3')
           $('input').css('color', '#88dba3')
